--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crypto-key-maker-contracts",
+  "name": "trust-contracts",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,31 +13,44 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.2",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.3",
-    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "@nomiclabs/hardhat-ethers": "^2.1.0",
-    "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.5",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.1",
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.5",
+    "@openzeppelin/hardhat-defender": "^1.8.1",
+    "@openzeppelin/hardhat-upgrades": "^1.22.1",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
+    "@types/chai": "^4.3.4",
     "@types/mocha": "^9.1.1",
-    "chai": "^4.3.6",
-    "erc721a": "^4.2.3",
+    "@types/node": "^18.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "chai": "^4.3.7",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "ethers": "^5.6.9",
     "hardhat": "^2.10.1",
     "hardhat-gas-reporter": "^1.0.8",
-    "solhint": "^3.3.7",
-    "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.7.21",
+    "prettier": "2.8.4",
+    "prettier-plugin-solidity": "^1.1.2",
+    "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.1",
+    "@opengsn/contracts": "^3.0.0-beta.1",
+    "@openzeppelin/contracts": "^4.8.1",
+    "@openzeppelin/contracts-upgradeable": "^4.8.1",
     "dotenv": "^16.0.1",
+    "erc721a": "^4.2.0",
     "hardhat-contract-sizer": "^2.6.1",
-    "unix-timestamp": "^1.0.2"
+    "ipfs-http-client": "^55.0.0",
+    "ipfs-utils": "^9.0.7",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.3.9"
   }
 }
